Fixed invisible tooltip after latest cash.js update

--- a/web/css/layout/_swatches.less
+++ b/web/css/layout/_swatches.less
@@ -120,7 +120,7 @@
 
 .swatch-option-tooltip {
     &:extend(.breeze-z-layer all);
-    &[style*="block"] {
+    &:not([style*="none"]) {
         &:extend(.breeze-z-layer-visible);
     }
 }
